[package]
edition = "2018"
name = "posts"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "posts"

[dependencies]
serde = "1"
derive_more = "0"
hc_lib_ranking_index = {git = "https://github.com/holochain-open-dev/ranking-index", branch = "main", package = "hc_lib_ranking_index"}

hdk = {version="0.0.122", features = ["encoding"]}
